--- a/DashBoard/src/main/resources/views/SignUp.fxml
+++ b/DashBoard/src/main/resources/views/SignUp.fxml
@@ -11,47 +11,47 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="552.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LogIn">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="552.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.soporte.SignUpController">
    <children>
-      <Pane prefHeight="552.0" prefWidth="600.0" style="-fx-background-color: black;">
+      <Pane fx:id="pan_sing" prefHeight="552.0" prefWidth="600.0" style="-fx-background-color: black;">
          <children>
             <HBox layoutY="-1.0" prefHeight="87.0" prefWidth="600.0" stylesheets="@../../../css/newCascadeStyleSheet.css">
                <children>
-                  <Label id="lblTitulo" fx:id="lblTitulo" cache="true" prefHeight="89.0" prefWidth="600.0" style="-fx-background-color: grey;" stylesheets="@../../../css/newCascadeStyleSheet.css" text="         Bienvenido!" textFill="WHITE" textOverrun="CLIP">
+                  <Label id="lblTitulo" fx:id="lbl_titulo" cache="true" prefHeight="89.0" prefWidth="600.0" style="-fx-background-color: grey;" stylesheets="@../../../css/newCascadeStyleSheet.css" text="         Bienvenido!" textFill="WHITE" textOverrun="CLIP">
                      <font>
                         <Font name="Arial Black" size="48.0" />
                      </font>
                   </Label>
                </children>
             </HBox>
-            <Label contentDisplay="TOP" layoutX="216.0" layoutY="130.0" text="Usuario:" textFill="#f5f3f3" textOverrun="CLIP">
+            <Label fx:id="lbl_usuario" contentDisplay="TOP" layoutX="216.0" layoutY="130.0" text="Usuario:" textFill="#f5f3f3" textOverrun="CLIP">
                <font>
                   <Font name="Arial Black" size="24.0" />
                </font>
             </Label>
-            <TextField fx:id="txtUsuario" layoutX="156.0" layoutY="179.0" prefHeight="37.0" prefWidth="271.0" promptText="escribe tu usuario">
+            <TextField fx:id="txt_suario" layoutX="156.0" layoutY="179.0" prefHeight="37.0" prefWidth="271.0" promptText="escribe tu usuario">
                <font>
                   <Font name="Arial Black" size="14.0" />
                </font>
             </TextField>
-            <Label contentDisplay="TOP" layoutX="226.0" layoutY="271.0" text="PassKey:" textFill="#f5f3f3" textOverrun="CLIP">
+            <Label fx:id="lbl_passkey" contentDisplay="TOP" layoutX="226.0" layoutY="271.0" text="PassKey:" textFill="#f5f3f3" textOverrun="CLIP">
                <font>
                   <Font name="Arial Black" size="24.0" />
                </font>
             </Label>
-            <TextField fx:id="txtClave" layoutX="156.0" layoutY="328.0" prefHeight="37.0" prefWidth="271.0" promptText="ingresa tu clave">
+            <TextField fx:id="txt_clave" layoutX="156.0" layoutY="328.0" prefHeight="37.0" prefWidth="271.0" promptText="ingresa tu clave">
                <font>
                   <Font name="Arial Black" size="14.0" />
                </font>
             </TextField>
-            <Button fx:id="btnSesion" layoutX="212.0" layoutY="420.0" mnemonicParsing="false" text="Iniciar Sesión">
+            <Button fx:id="btn_sesion" layoutX="212.0" layoutY="420.0" mnemonicParsing="false" onAction="#iniciarSesion" text="Iniciar Sesión">
                <font>
                   <Font name="Arial Black" size="18.0" />
                </font>
             </Button>
-            <ImageView fx:id="img" fitHeight="97.0" fitWidth="136.0" layoutX="474.0" layoutY="411.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="img_info" fitHeight="97.0" fitWidth="136.0" layoutX="474.0" layoutY="411.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../imagen/Imagen%20de%20WhatsApp%202025-09-14%20a%20las%2023.29.00_40c35859.jpg" />
+                  <Image url="@../../../imagen/info.jpg" />
                </image>
             </ImageView>
          </children>
